--- a/CorrectifFr/correctifBG.cfg
+++ b/CorrectifFr/correctifBG.cfg
@@ -25,6 +25,10 @@ Localization
 		#autoLOC_8002385 = Il n'y a pas que les fusées pour prendre de l'altitude. Cette petite pale d'hélicoptère peut générer de la portance dès qu'il y a suffisamment de pression atmosphérique.
 		#autoLOC_8002386 = Il n'y a pas que les fusées pour prendre de l'altitude. Cette pale d'hélicoptère intermédiaire peut générer de la portance dès qu'il y a suffisamment de pression atmosphérique.
 		#autoLOC_8002387 = Il n'y a pas que les fusées pour prendre de l'altitude. Cette grande pale d'hélicoptère peut générer de la portance dès qu'il y a suffisamment de pression atmosphérique.
+        #autoLOC_8002398 = Cône minuscule
+		#autoLOC_8002399 = Un cône minuscule pour une utilisation riquiqui, mais importante.\n\nNe laissez pas Jeb s'en servir de chapeau.
+		#autoLOC_8002400 = Cône tout petit
+		#autoLOC_8002401 = Un petit cône destiné à l'uniformisation de l'aérodynamisme, en particulier pour les rotors.
         #autoLOC_8005442 = Hélices
 		#autoLOC_8005443 = Aérodynamique des hélices
         #autoLOC_8005469 = Grâce à un double rotor principal, et deux hélices, le Kerbodyne Rotodyne décolle comme un hélicoptère, et vole comme un avion.\nPour voler, l'action 1 active les moteurs et les cellules de carburant. Le décollage vertical est contrôlé par les gaz principaux, et la translation av./arr. modifiera l'inclinaison des pales avant pour contrôler la vélocité avant.
