--- a/CorrectifFr/correctifSquad.cfg
+++ b/CorrectifFr/correctifSquad.cfg
@@ -4,6 +4,7 @@ Localization
     {
         #autoLOC_21150 = <color=orange><b>Impossible d'embaucher plus de kerbals. Le Complexe des astronautes est plein !</b></color>
         #autoLOC_135142 = Mission abandonnée
+        #autoLOC_146503 = Réglages de pièce avancés :
         #autoLOC_148089 = Abandon d'urgence
         #autoLOC_190743 = Vous pourrez jouer sans aucune contrainte, mais n'aurez pas accès au complexe R&D ni au Centre de contrôle de mission.
         #autoLOC_190759 = Les Fonds, la Réputation et la Science sont activés, et des Contrats sont disponibles au Centre de contrôle de mission.
@@ -75,8 +76,10 @@ Localization
         #autoLOC_900583 = Activer le groupe d’actions Train d'atterrissage
         #autoLOC_900596 = Groupe d'action Abandon
         #autoLOC_900794 = Abandon d'urgence
+        #autoLOC_900906 = Réglages de pièce avancés
         #autoLOC_1200185 = Les sondes permettent aux kerbals de partir en exploration depuis le confort et la sécurité du Centre de contrôle de mission, mais elles nécessitent une trajectoire dégagée pour leurs communications avec Kerbin.\n\nCe scénario vous montre un des Réseaux de Communications avec l'espace Lointain (RCL) possible vous permettant de rester en contact avec les plus courageux explorateurs kerbals.
         #autoLOC_1900819 = Abandon d'urgence
+        #autoLOC_1900931 = Réglages de pièce avancés
         #autoLOC_5050031 = Complexe des astronautes plein
         #autoLOC_6001310 = Actionner la roue de réaction
         #autoLOC_6001329 = Déployer/Rétracter
