Terrain scatters/quality

--- a/CorrectifFr/correctifSquad.cfg
+++ b/CorrectifFr/correctifSquad.cfg
@@ -6,6 +6,9 @@ Localization
         #autoLOC_135142 = Mission abandonnée
         #autoLOC_146503 = Réglages de pièce avancés :
         #autoLOC_148089 = Abandon d'urgence
+        #autoLOC_149726 = Qualité du terrain :
+        #autoLOC_149780 = Détails de surface :
+		#autoLOC_149788 = Densité des détails :
         #autoLOC_190743 = Vous pourrez jouer sans aucune contrainte, mais n'aurez pas accès au complexe R&D ni au Centre de contrôle de mission.
         #autoLOC_190759 = Les Fonds, la Réputation et la Science sont activés, et des Contrats sont disponibles au Centre de contrôle de mission.
         #autoLOC_235508 = Actionner générateur
@@ -77,6 +80,9 @@ Localization
         #autoLOC_900596 = Groupe d'action Abandon
         #autoLOC_900794 = Abandon d'urgence
         #autoLOC_900906 = Réglages de pièce avancés
+        #autoLOC_900923 = Qualité du terrain
+		#autoLOC_900925 = Détails de surface
+		#autoLOC_900926 = Densité des détails
         #autoLOC_1200185 = Les sondes permettent aux kerbals de partir en exploration depuis le confort et la sécurité du Centre de contrôle de mission, mais elles nécessitent une trajectoire dégagée pour leurs communications avec Kerbin.\n\nCe scénario vous montre un des Réseaux de Communications avec l'espace Lointain (RCL) possible vous permettant de rester en contact avec les plus courageux explorateurs kerbals.
         #autoLOC_1900819 = Abandon d'urgence
         #autoLOC_1900931 = Réglages de pièce avancés
