--- a/CorrectifFr/correctifSquad.cfg
+++ b/CorrectifFr/correctifSquad.cfg
@@ -76,6 +76,7 @@ Localization
         #autoLOC_900112 = Gérez les contrats disponibles depuis le Centre de contrôle de mission et profitez d'un panorama sur les sites de lancement, si vous n'avez pas peur de vous approcher d'une fusée en train de décoller.
         #autoLOC_900124 = C'est au Complexe des astronautes que se trouvent les lieux d'hébergements et de loisir de tout notre équipage. C'est également ici que postulent les nouveaux candidats.
         #autoLOC_900303 = Ouvrir le Complexe des astronautes
+        #autoLOC_900514 = Afficher le Centre de portance
         #autoLOC_900583 = Activer le groupe d’actions Train d'atterrissage
         #autoLOC_900596 = Groupe d'action Abandon
         #autoLOC_900794 = Abandon d'urgence
