--- a/CorrectifFr/correctifSquad.cfg
+++ b/CorrectifFr/correctifSquad.cfg
@@ -109,6 +109,7 @@ Localization
 		#autoLOC_6001869 = Rétracter train d'atterrissage
 		#autoLOC_6001870 = Déployer train d'atterrissage
         #autoLOC_6002115 = Centre de contrôle de mission
+        #autoLOC_6002124 = Voie de transfert
         #autoLOC_6002125 = Complexe des astronautes
         #autoLOC_6002382 = Actionner <<1>>
         #autoLOC_6002386 = Actionner <<1>>
