--- a/CorrectifFr/correctifSquad.cfg
+++ b/CorrectifFr/correctifSquad.cfg
@@ -111,6 +111,7 @@ Localization
         #autoLOC_6002115 = Centre de contrôle de mission
         #autoLOC_6002124 = Voie de transfert
         #autoLOC_6002125 = Complexe des astronautes
+        #autoLOC_6002137 = Soufflerie de la R&D
         #autoLOC_6002382 = Actionner <<1>>
         #autoLOC_6002386 = Actionner <<1>>
         #autoLOC_6002389 = Actionner <<1>>
