--- a/CorrectifFr/correctifSquad.cfg
+++ b/CorrectifFr/correctifSquad.cfg
@@ -129,6 +129,16 @@ Localization
         #autoLOC_6002701 = Actionner le verrouillage de la rotation
         #autoLOC_6003002 = Train d'atterrissage
         #autoLOC_6003007 = Abandon
+        #autoLOC_6003008 = Personnalisé 01
+		#autoLOC_6003009 = Personnalisé 02
+		#autoLOC_6003010 = Personnalisé 03
+		#autoLOC_6003011 = Personnalisé 04
+		#autoLOC_6003012 = Personnalisé 05
+		#autoLOC_6003013 = Personnalisé 06
+		#autoLOC_6003014 = Personnalisé 07
+		#autoLOC_6003015 = Personnalisé 08
+		#autoLOC_6003016 = Personnalisé 09
+		#autoLOC_6003017 = Personnalisé 10
         #autoLOC_6006002 = Actionner la vanne
         #autoLOC_6006003 = Ouvrir la vanne
         #autoLOC_6006004 = Fermer la vanne
@@ -138,6 +148,10 @@ Localization
 		#autoLOC_6012028 = Cône de protection pour fusée Mk16A
 		#autoLOC_6012029 = Un cône immense pour les énormes fusées de 5m.
         #autoLOC_6012030 = Bienvenue dans KSP 1.7: Room to Maneuver ! \n\nComme son nom l'implique, cette mise à jour comporte de nouvelles fonctionnalités ainsi que des améliorations pour vous aider à piloter vos fusées dans l'espace. \n\nNous avons amélioré deux outils de navigation. En haut de votre écran de vol, vous pourrez voir une nouvelle icône située à côté de l'altimètre. Cliquez sur l'altimètre pour afficher sa valeur par rapport au niveau de la mer, ou par rapport au niveau du sol. Désormais, Jeb pourra faire atterrir votre vaisseau simplement en s'aidant des instruments. Et cette fois, pas de risque de déconstruction spontanée imprévue. \n\nEn bas à gauche de votre écran de vol, vous trouverez une nouvelle icône permettant de parcourir tous les autres modes. Cliquez dessus, et vous découvrirez le nouveau “mode Manœuvre”. Cliquez dessus pour afficher une fenêtre unique vous offrant, en mode Carte ET en mode Vol, un aperçu des informations sur l'orbite, telles que l'apoastre, le périastre, l'excentricité, etc. Encore mieux, vous pourrez créer un nœud de manœuvre pour afficher une seconde fenêtre vous permettant de modifier celui-ci, afin de régler chaque transfert interplanétaire dans ses moindres détails. \n\nNous avons également mis à jour l'apparence des petits propulseurs de manœuvre Fourmi, Tic, Pouet, Place-Partout 7, Bloc de propulsion RCS RV-105, et le Propulseur Vernor. L'apparence de tous ces propulseurs a été modifiée, et les propulseurs Tic, Fourmi, et Araignée possèdent désormais de nouvelles variantes. Nous avons également mis la carte spatiale à jour pour que vous en profitiez un maximum en voyageant d'une planète à l'autre.\n\nEt pour couronner le tout, nous avons ajouté des barres de défilement aux fenêtres d'actions de pièces lorsqu'elles deviennent trop grandes : très utiles, surtout si vous êtes accros aux mods. Vous trouverez également de nouvelles valeurs de réglages sur certains propulseurs à manœuvre, ainsi qu'un nouveau cône de protection de 3,75 m, et une de 5 m pour les possesseurs de l'extension Making History !\n\nNous espérons que vous vous amuserez bien avec la version 1.7 Room to Maneuver !
+        #autoLOC_6013013 = Personnalisé 01
+		#autoLOC_6013014 = Personnalisé 02
+		#autoLOC_6013015 = Personnalisé 03
+		#autoLOC_6013016 = Personnalisé 04
         #autoLOC_7001010 = Complexe des astronautes plein
         #autoLOC_7001013 = <b><color=#DB8310>Gene Kerman :</color></b>\nBienvenue au Centre de contrôle de mission. Faites votre choix.
         #autoLOC_7001170 = Traitement du Complexe des astronautes... // Sûrement un "loading tip". Un peu bizarre en français, je suppose que traitement = soin
