Corrections de Nazalassa

--- a/CorrectifTraductionFrancaise/correctifBG.cfg
+++ b/CorrectifTraductionFrancaise/correctifBG.cfg
@@ -26,7 +26,7 @@ Localization
 		#autoLOC_8002386 = Il n'y a pas que les fusées pour prendre de l'altitude. Cette pale d'hélicoptère intermédiaire peut générer de la portance dès qu'il y a suffisamment de pression atmosphérique.
 		#autoLOC_8002387 = Il n'y a pas que les fusées pour prendre de l'altitude. Cette grande pale d'hélicoptère peut générer de la portance dès qu'il y a suffisamment de pression atmosphérique.
         #autoLOC_8002398 = Cône minuscule
-		#autoLOC_8002399 = Un cône minuscule pour une utilisation riquiqui, mais importante.\n\nNe laissez pas Jeb s'en servir de chapeau.
+		#autoLOC_8002399 = Un cône minuscule pour une utilisation riquiqui, mais importante.\n\nNe laissez pas Jeb s'en servir comme chapeau.
 		#autoLOC_8002400 = Cône tout petit
 		#autoLOC_8002401 = Un petit cône destiné à l'uniformisation de l'aérodynamisme, en particulier pour les rotors.
         #autoLOC_8005442 = Hélices
