--- a/CorrectifTraductionFrancaise/correctifSquad.cfg
+++ b/CorrectifTraductionFrancaise/correctifSquad.cfg
@@ -50,7 +50,7 @@ Localization
         #autoLOC_500492 = abandon booster urgence explo défail patate (plus propulseur fusée sûr séparat solid éap eap survie réacteur
         #autoLOC_500578 = Pouvant transporter 16 kerbals, la cabine Mk3 représente la classe "Super Économique" du voyage aérospatial pour les employés du Complexe des astronautes et n'accepte que les bagages à main. Tout bagage enregistré ou émotionnel doit être placé dans les soutes Mk3.
         #autoLOC_500855 = Port d'amarrage Chop-O-Tron protégé
-        #autoLOC_500856 = Inventé après une manifestation pacifique contre le manque de systèmes d'amarrage spatiaux ayant dégénéré, le port d'amarrage Chop-O-Tron permet d'attacher fermement deux vaisseaux distincts. Après amarrage, les vaisseaux peuvent être désamarrés tout aussi facilement. La version protégée possède des panneaux déployables protégeant le port durant l'ascension.
+        #autoLOC_500856 = Inventé après qu'une manifestation pacifique contre le manque de systèmes d'amarrage spatiaux ait dégénéré, le port d'amarrage Chop-O-Tron permet d'attacher fermement deux vaisseaux distincts. Après amarrage, les vaisseaux peuvent être désamarrés tout aussi facilement. La version protégée possède des panneaux déployables protégeant le port durant l'ascension.
         #autoLOC_500893 = abandon booster urgence explo ?tds t.d.s défail solide sécurité survie tour
         #autoLOC_501420 = La poussière brune tache tout ce qu'elle touche sur votre combinaison. Le Centre de contrôle de mission trouve ça hilarant.
         #autoLOC_501424 = Après prélèvement d'échantillons à la surface, vous confirmez avec beaucoup de certitude que Pol n'est pas, en réalité, composé de pollen. Le Centre de contrôle de mission ne va pas en revenir !
